api refactor tests and lint should pass
